add device screen
